--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>TodoList</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <%= stylesheet_link_tag 'application'%>
     <%= javascript_pack_tag 'application'%>
     <%= javascript_pack_tag 'index'%>
   </head>
